--- a/ProxyPage.htm
+++ b/ProxyPage.htm
@@ -4,8 +4,8 @@
     <title>Saml Proxy page</title>
     <script src="https://cdns.gigya.com/js/gigya.saml.js?apiKey=4_BUCs1dEc3lGWyLesDXxPlg">
     {  // Global Config object
-        loginURL: 'https://gpassciam.github.io/Coral/LoginPage.htm'
-        ,logoutURL: 'https://gpassciam.github.io/Coral/LoginPage.htm'
+         loginURL: 'https://dev.arge.platformcoral.com/login'
+        ,logoutURL: 'https://dev.arge.platformcoral.com/logout'
     }
     </script>
 </head>
